--- a/面试常见手写题/手写简易ajax.html
+++ b/面试常见手写题/手写简易ajax.html
@@ -9,24 +9,26 @@
 
 <body>
     <script>
-        function ajax(url) {
+        const test = ajax('./data/test.json')
+
+        function ajax(path) {
             const p = new Promise(
                 (resolve, reject) => {
                     const xhr = new XMLHttpRequest();
-                    xhr.open('GET', url, true)
-                    xhr.onreadystatechange = function () {
-                        if (xhr.readyState === 4) {
-                            if (xhr.status === 200) {
-                                console.log(JSON.parse(xhr.responseText));
+                    xhr.open('POST', path, true)
+                    xhr.onreadystatechange = () => {
+                        if (xhr.readyState == 4) {
+                            if (xhr.status == 200) {
+                                resolve(JSON.parse(xhr.responseText))
                             }
                         }
                     }
-                    xhr.send(null)
+                    xhr.send()
                 }
+
             )
             return p
         }
-        const test = ajax('/data/test.json')
         test.then(data => {
             console.log(data);
         }).catch(err => {
