--- a/面试常见手写题/深拷贝.html
+++ b/面试常见手写题/深拷贝.html
@@ -33,10 +33,11 @@
                 result = {}
             }
             for (let key in obj) {
-                result[key] = deepClone(obj[key])
+                if (obj.hasOwnProperty(key)) {
+                    result[key] = deepClone(obj[key])
+                }
             }
             return result
-
         }
         const obj2 = deepClone(obj1);
         obj2.name = "郭嘉宇"
