--- a/面试题谢谢/随机数.html
+++ b/面试题谢谢/随机数.html
@@ -5,20 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            min-width: 550px;
-        }
-    </style>
 </head>
 
 <body>
-
+    <script>
+        for (let i = 0; i < 10; i++) {
+            setTimeout(() => {
+                console.log(i);
+            }, 1000)
+        }
+    </script>
 </body>
 
 </html>
