--- a/LeetCode算法题/冒泡排序.html
+++ b/LeetCode算法题/冒泡排序.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>冒泡排序</title>
 </head>
 
 <body>
-    <script src="./class类与继承.js"></script>
+
 </body>
 
 </html>
