--- a/面试常见手写题/手写call.html
+++ b/面试常见手写题/手写call.html
@@ -18,13 +18,12 @@
 <body>
     <script>
         Function.prototype.bind1 = function () {
-            let args = Array.prototype.slice.call(arguments);
-            let t = args.shift();
-            const self = this;
+            const args = Array.prototype.slice.call(arguments);
+            let t = args.shif();
+            let self = this;
             return function () {
                 return self.apply(t, args)
             }
-
         }
     </script>
 </body>
