--- a/看输出说结果/测试题1.html
+++ b/看输出说结果/测试题1.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>路径总和 二叉树求和</title>
+    <title>Document</title>
 </head>
 
 <body>
-
+    <script>
+        function a() {
+            console.log(this);
+        }
+        a.call(null);
+    </script>
 </body>
 
 </html>
