--- a/LeetCode算法题/LeetCode-226.html
+++ b/LeetCode算法题/LeetCode-226.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>路径总和 二叉树求和</title>
+    <title>翻转二叉树</title>
 </head>
 
 <body>
