--- a/杂乱/剑指Offer-34.html
+++ b/杂乱/剑指Offer-34.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>路径总和 二叉树求和</title>
+    <title> 二叉树中和为某一值的路径</title>
 </head>
 
 <body>
