--- a/练习/index.html
+++ b/练习/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-
+    <script>
+        console.log(Object.prototype.toString.call('111'));
+        console.log(typeof null);
+        console.log(typeof undefined);
+        console.log(Math.random());
+    </script>
 </body>
 
 </html>
